@@ -1,0 +1,72 @@
+Function: znconreylog
+Section: number_theoretical
+C-Name: znconreylog
+Prototype: GG
+Help: znconreylog(bid,m): Conrey logarithm associated to m in (Z/qZ)*,
+ where bid is znstar(q, 2)
+Doc: Given a \var{bid} associated to $(\Z/q\Z)^*$ (as per \kbd{bid =
+ idealstar(,q)}), this function returns the Conrey logarithm of
+ $m \in (\Z/q\Z)^*$.
+
+ Let $q = \prod_p p^{e_p}$ be the factorization of $q$ into distinct primes,
+ where we assume $e_2 = 0$ or $e_2 \geq 2$. (If $e_2 = 1$, we can ignore $2$
+ from the factorization, as if we replaced $q$ by $q/2$, since $(\Z/q\Z)^*
+ \sim (\Z/(q/2)\Z)^*$.)
+
+ For all $p$ with $e_p > 0$, let $g_p$ be the element in $(\Z/q\Z)^*$ which is
+
+ \item congruent to $1$ mod $q/p^{e_p}$,
+
+ \item congruent mod $p^{e_p}$ to the smallest integer whose order
+ is $\phi(p^{e_p})$ for $p$ odd,
+
+ \item $g_2 = 3 \mod 2^{e_2}$ for $e_2 \geq 2$.
+
+ When $e_2\geq 3$, we let further $g_{-1}$ the element in $(\Z/q\Z)^*$ which is
+
+ \item congruent to $1$ mod $q/2^{e_2}$,
+
+ \item congruent to $-1$ mod $2^{e_2}$.
+
+ Then the $g_p$ (and the extra $g_{-1}$ if $e_2\geq 3$) are independent
+ generators of $\Z/q\Z^*$, i.e. every $m$ in $(\Z/q\Z)^*$ can be written
+ uniquely as $\prod_p g_p^{m_p}$, where $m_p$ is defined modulo the
+ order $o_p$ of $g_p$
+ and $p \in S_q$, the set of prime divisors of $q$ together with $-1$
+ if $e_2 \geq 3$. Note that the $g_p$ are in general \emph{not} SNF
+ generators as produced by \kbd{znstar} or \kbd{idealstar} whenever
+ $\omega(q) \geq 2$, although their number is the same. They however allow
+ to handle the finite abelian group $(\Z/q\Z)^*$ in a fast(er) and elegant 
+ way. (Which unfortunately does not generalize to ray class groups or Hecke
+ characters.)
+
+ The Conrey logarithm of $m$ is the vector $(m_p)_{p\in S_q}$.
+
+ \bprog
+ ? G = idealstar(,126000)
+ ? znconreylog(G,1)
+ %2 = [0, 0, 0, 0, 0]~
+ ? znconreylog(G,2)  \\ 2 is not coprime to modulus !!!
+   ***   at top-level: znconreylog(G,2)
+   ***                 ^-----------------
+   *** znconreylog: elements not coprime in Zideallog:
+     2
+     126000
+   ***   Break loop: type 'break' to go back to GP prompt
+ break> 
+ ? znconreylog(G,11) \\ wrt. Conrey generators
+ %5 = [0, 3, 1, 76, 4]~
+ ? log11 = ideallog(,11,G)   \\ wrt. SNF generators
+ %6 = [178, 3, -75, 1, 0]~
+ @eprog\noindent
+
+ For convenience, we allow to input the ordinary discrete log of $m$,
+ $\kbd{ideallog(,m,bid)}$, which is faster than using $m$:
+ \bprog
+ ? znconreylog(G, log11)
+ %7 = [0, 3, 1, 76, 4]~
+ ? for(i=1,10^5,znconreylog(G,11))
+ time = 596 ms.
+ ? for(i=1,10^5,znconreylog(G,log11))
+ time = 84 ms.
+ @eprog
