@@ -1558,7 +1558,7 @@ GEN     ZV_chinese(GEN A, GEN P, GEN *pt_mod);
 GEN     ZV_chinese_tree(GEN A, GEN P, GEN tree, GEN *pt_mod);
 GEN     ZV_producttree(GEN xa);
 GEN     ZX_nv_mod_tree(GEN P, GEN xa, GEN T);
-GEN     Zideallog(GEN bid, GEN N);
+GEN     Zideallog(GEN bid, GEN x);
 long    Zp_issquare(GEN a, GEN p);
 GEN     bestappr(GEN x, GEN k);
 GEN     bestapprPade(GEN x, long B);
@@ -1569,6 +1569,7 @@ GEN     chinese1_coprime_Z(GEN x);
 GEN     classno(GEN x);
 GEN     classno2(GEN x);
 long    clcm(long a,long b);
+GEN     conrey_normalize(GEN m, GEN cyc);
 GEN     contfrac0(GEN x, GEN b, long flag);
 GEN     contfracpnqn(GEN x, long n);
 GEN     fibo(long n);
@@ -1628,6 +1629,10 @@ long    uissquare(ulong A);
 long    uissquareall(ulong A, ulong *sqrtA);
 long    unegisfundamental(ulong x);
 long    uposisfundamental(ulong x);
+GEN     znconreychar(GEN bid, GEN m);
+GEN     znconreyconductor(GEN bid, GEN co, GEN *pm);
+GEN     znconreyfromchar(GEN bid, GEN chi);
+GEN     znconreylog(GEN bid, GEN x);
 GEN     znlog(GEN x, GEN g, GEN o);
 GEN     znorder(GEN x, GEN o);
 GEN     znprimroot(GEN m);
@@ -4349,6 +4354,7 @@ INLINE GEN    bid_get_grp(GEN bid);
 INLINE GEN    bid_get_ideal(GEN bid);
 INLINE GEN    bid_get_mod(GEN bid);
 INLINE GEN    bid_get_no(GEN bid);
+INLINE GEN    bid_get_U(GEN bid);
 INLINE GEN    bnf_get_clgp(GEN bnf);
 INLINE GEN    bnf_get_cyc(GEN bnf);
 INLINE GEN    bnf_get_fu(GEN bnf);
