@@ -61,4 +61,55 @@ _MAT).")
 [[1, 3, 1], [2, 2, 1], [3, 1, 1], [4, 0, 1], [5, 3, 1], [6, 2, 1], [7, 1, 1]
 , [0, 2, 0], [1, 1, 0], [2, 0, 0], [3, 3, 0], [4, 2, 0], [5, 1, 0], [6, 0, 0
 ], [7, 3, 0], [0, 0, 1]]
-Total time spent: 1268
+  ***   at top-level: znconreychar(G,2)
+  ***                 ^-----------------
+  *** znconreychar: elements not coprime in Zideallog:
+    2
+    8
+[0, 0]
+[0, 1]
+[1, 1]
+[1, 0]
+[[0], [1], [3], [2]]
+[0, 0]
+[1, 1]
+[16, 1]
+[12, 1]
+[16, 1]
+[1, 16]~
+[1, 16]~
+[1, matrix(0,2)]
+[25, Mat([5, 2])]
+75
+75
+[1, 1]
+1:[1, matrix(0,2)]:[]
+4:[25, Mat([5, 2])]:[2]
+7:[5, Mat([5, 1])]:[1]
+13:[25, Mat([5, 2])]:[19]
+16:[25, Mat([5, 2])]:[4]
+19:[25, Mat([5, 2])]:[18]
+22:[25, Mat([5, 2])]:[17]
+26:[3, Mat([3, 1])]:[1]
+28:[25, Mat([5, 2])]:[7]
+31:[25, Mat([5, 2])]:[8]
+32:[15, [3, 1; 5, 1]]:[1, 1]
+34:[25, Mat([5, 2])]:[14]
+37:[25, Mat([5, 2])]:[9]
+43:[5, Mat([5, 1])]:[3]
+46:[25, Mat([5, 2])]:[12]
+49:[5, Mat([5, 1])]:[2]
+52:[25, Mat([5, 2])]:[1]
+58:[25, Mat([5, 2])]:[3]
+61:[25, Mat([5, 2])]:[16]
+64:[25, Mat([5, 2])]:[6]
+67:[25, Mat([5, 2])]:[13]
+68:[15, [3, 1; 5, 1]]:[1, 3]
+73:[25, Mat([5, 2])]:[11]
+74:[15, [3, 1; 5, 1]]:[1, 2]
+[]
+[]~
+1
+1
+[]~
+Total time spent: 1512
