@@ -1,4 +1,4 @@
-HEAP=[166, if(precision(1.)==38,70244,71856)];
+HEAP=[166, if(precision(1.)==38,70246,71858)];
 default(realprecision,154); Pi; default(realprecision,38);
 dobnf(T,flag=0,tech=[])= setrand(1); my(K = bnfinit(T,flag,tech)); [K.cyc,K.fu];
 \e
