@@ -384,6 +384,7 @@ BA143- [arm64] add aarch64 assembly kernel
   145- [libpari] znstar0 with Idealstar semantic; could be made available under
        GP as default znstar, but current znstar/idealstar have incompatible
        defaults. Called by idealstar(,N).
+  146- [GP] znconreychar, znconreylog, znconreyconductor
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
